[gd_scene load_steps=4 format=2]

[ext_resource path="res://options/screen_settings/ScreenSettings.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/reset.png" type="Texture" id=3]
[ext_resource path="res://utils/AnimatedButton.tscn" type="PackedScene" id=4]

[node name="ScreenSettings" type="MarginContainer" groups=["save"]]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_left = 4
script = ExtResource( 1 )

[node name="V" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_right = 444.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( -316, -83 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4

[node name="Reset" parent="V" instance=ExtResource( 4 )]
margin_left = 351.953
margin_right = 440.0
size_flags_horizontal = 8
text = "Reset Screen"

[node name="V" type="VBoxContainer" parent="V"]
margin_top = 26.0
margin_right = 440.0
margin_bottom = 66.0
custom_constants/separation = 2

[node name="H" type="HBoxContainer" parent="V/V"]
margin_right = 440.0
margin_bottom = 22.0
custom_constants/separation = 2

[node name="Label" type="Label" parent="V/V/H"]
margin_right = 416.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Brightness"
valign = 1

[node name="BReset" parent="V/V/H" instance=ExtResource( 4 )]
margin_left = 418.0
margin_right = 440.0
rect_min_size = Vector2( 22, 0 )
size_flags_vertical = 3
expand_icon = true

[node name="ResetIcon" type="TextureRect" parent="V/V/H/BReset"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Brightness" type="HSlider" parent="V/V"]
margin_top = 24.0
margin_right = 440.0
margin_bottom = 40.0
focus_mode = 0
size_flags_horizontal = 3
min_value = 0.5
max_value = 1.5
step = 0.0
value = 1.0

[node name="V2" type="VBoxContainer" parent="V"]
margin_top = 70.0
margin_right = 440.0
margin_bottom = 110.0
custom_constants/separation = 2

[node name="H" type="HBoxContainer" parent="V/V2"]
margin_right = 440.0
margin_bottom = 22.0
custom_constants/separation = 2

[node name="Label" type="Label" parent="V/V2/H"]
margin_right = 416.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Contrast"
valign = 1

[node name="CReset" parent="V/V2/H" instance=ExtResource( 4 )]
margin_left = 418.0
margin_right = 440.0
rect_min_size = Vector2( 22, 0 )
size_flags_vertical = 3
expand_icon = true

[node name="ResetIcon" type="TextureRect" parent="V/V2/H/CReset"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Contrast" type="HSlider" parent="V/V2"]
margin_top = 24.0
margin_right = 440.0
margin_bottom = 40.0
focus_mode = 0
size_flags_horizontal = 3
min_value = 0.5
max_value = 1.5
step = 0.0
value = 1.0

[node name="V3" type="VBoxContainer" parent="V"]
margin_top = 114.0
margin_right = 440.0
margin_bottom = 154.0
custom_constants/separation = 2

[node name="H" type="HBoxContainer" parent="V/V3"]
margin_right = 440.0
margin_bottom = 22.0
custom_constants/separation = 2

[node name="Label" type="Label" parent="V/V3/H"]
margin_right = 416.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Saturation"
valign = 1

[node name="SReset" parent="V/V3/H" instance=ExtResource( 4 )]
margin_left = 418.0
margin_right = 440.0
rect_min_size = Vector2( 22, 0 )
size_flags_vertical = 3
expand_icon = true

[node name="ResetIcon" type="TextureRect" parent="V/V3/H/SReset"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Saturation" type="HSlider" parent="V/V3"]
margin_top = 24.0
margin_right = 440.0
margin_bottom = 40.0
focus_mode = 0
size_flags_horizontal = 3
min_value = 0.5
max_value = 1.5
step = 0.0
value = 1.0

[connection signal="pressed" from="V/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="V/V/H/BReset" to="." method="_on_BReset_pressed"]
[connection signal="value_changed" from="V/V/Brightness" to="." method="_on_Brightness_value_changed"]
[connection signal="pressed" from="V/V2/H/CReset" to="." method="_on_CReset_pressed"]
[connection signal="value_changed" from="V/V2/Contrast" to="." method="_on_Contrast_value_changed"]
[connection signal="pressed" from="V/V3/H/SReset" to="." method="_on_SReset_pressed"]
[connection signal="value_changed" from="V/V3/Saturation" to="." method="_on_Saturation_value_changed"]
